syntax = "proto3";

service PlacesStore {
    rpc GetRandomPlaceByCityName (GetRandomPlaceByCityNameRequest) returns (GetRandomPlaceByCityNameResponse);
    rpc GetCities (GetCitiesRequest) returns (GetCitiesResponse);
    rpc AddPlace (AddPlaceRequest) returns (AddPlaceResponse);
}

message Place {
    uint64 id = 1;
    string title = 2;
    string address = 3;
    string description = 4;
}

message City {
    uint64 id = 1;
    string title = 2;
}

// AddPlace
message AddPlaceRequest {
    string cityName = 1;
    Place place = 2;
}

message AddPlaceResponse {
    uint64 id = 1;
}

// GetCities
message GetCitiesRequest {
    uint64 amount = 1;
    uint64 offset = 2;
}

message GetCitiesResponse {
    repeated City cities = 1;
}

// GetRandomPlaceByCityName
message GetRandomPlaceByCityNameRequest {
    string cityName = 1;
}

message GetRandomPlaceByCityNameResponse {
    Place place = 1;
}